refactor(caching): replace single-threaded executor with virtual thread executor and update cache tracking mechanism